# sg3_isostream

./: LICENSE  README.md  pyproject.toml
src/sg3_isostream/: core.py  io.py  logic.py  plotting.py
