[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SG3_Isostream"
version = "1.0.0"
authors = [
  { name="Dr. Saminathan Sivaprakasham Murugesan", email="lab@sumathigenomics.com" }
]
description = "Sumathi Genomics Suite: Advanced Single-Cell Long-Read Isoform Analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anndata>=0.8.0",
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "scipy>=1.8.0",
    "matplotlib>=3.5.0",
    "scanpy>=1.9.0",
    "pysam>=0.19.0"
]

[project.urls]
"Homepage" = "https://github.com/sumathigenomics/SG3_Isostream"
